--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -11,7 +11,7 @@
     </div>
   </div> -->
   <ng-container *ngIf="!(resources && resources.length) && loadingContent1">
-    <div class="title-content">Content Management</div>
+    <div class="title-content">Content</div>
     <perfect-scrollbar class="scoll-empty-screen">
       <div class="empty-landing-screen">
         <div class="img-block"*ngIf="!emptyItems"><img class="action_icon" (load)="imageLoad()" src="assets/images/contentmanag-empty.svg"></div>   
