--- a/findly-builder/src/app/components/credentials-list/credentials-list.component.html
+++ b/findly-builder/src/app/components/credentials-list/credentials-list.component.html
@@ -32,8 +32,8 @@
          </div>
     </div>
     <perfect-scrollbar class="scroll-table" >
-        <div class="table-data">
-            <div class="table-header row m-0" *ngIf="(channnelConguired && channnelConguired.length) && loadingContent">
+        <div class="table-data" *ngIf="(channnelConguired && channnelConguired.length) ">
+            <div class="table-header row m-0" >
                 <div class="col-3 title">Credential Name</div>
                 <div class="col-3 title">Credential usage</div>
                 <div class="col-3 title">last updated<img src="assets/icons/dropdown_gray.svg" class="ml-1"></div>
