Redirection added to StructuredData

--- a/findly-builder/src/app/components/app-header/app-header.component.html
+++ b/findly-builder/src/app/components/app-header/app-header.component.html
@@ -110,7 +110,7 @@
                                           <a class="nav-link active" data-toggle="tab" href="#statusupdates">Status Updates</a>
                                         </li>
                                         <li class="nav-item">
-                                          <a class="nav-link" data-toggle="tab" href="#activities">Activities</a>
+                                          <a class="nav-link disabled" data-toggle="tab" href="#activities">Activities</a>
                                         </li>                                       
                                     </ul>
                                     <div class="tab-content">
@@ -121,17 +121,17 @@
                                                         <div class="docker-list" *ngIf="!statusDockerLoading">
                                                             <div class="row ml-0 mr-0 col-12 row-content" *ngFor="let task of dockersList; let index = index" [class.docUnRead]="checkRecordInDocs('unread', task)">
                                                                 <div class="col-9 pl-0 task_content">
-                                                                    <div class="heading">{{task.message}}</div>
+                                                                    <div class="heading text-truncate" [title]="task.message">{{task.message}}</div>
                                                                     <div class="desc" *ngIf="getStatusView(task.status)">{{task.status | titlecase}} <span class="tooltip-data" ngbTooltip='{{task.createdOn}}' tooltipClass="date-tooltip" placement="right-center" [container]="'body'"><img src="assets/icons/docker/clock.svg"></span></div>
                                                                     <div class="desc" *ngIf="!getStatusView(task.status)">{{getStatusView(task.status, 'other')}} <span class="tooltip-data" ngbTooltip='{{task.createdOn}}' tooltipClass="date-tooltip" placement="right-center" [container]="'body'"><img src="assets/icons/docker/clock.svg"></span></div>
                                                                 </div>
                                                                 <div class="col-3 d-flex p-0 align-items-center justify-content-end">
-                                                                    <div class="img-block" [class.mr-3]="(task.status == 'IN_PROGRESS' || task.status == 'validation') && (task.extractionSourceId && (task.jobType == 'webdomain' || task.jobType == 'faq' ))">
+                                                                    <div class="img-block" [class.mr-3]="(task.extractionSourceId && (task.jobType == 'webdomain' || task.jobType == 'faq' )) || (task.jobType == 'STRUCTURED_DATA_INGESTION')">
                                                                         <img src="assets/icons/docker/info.svg" *ngIf="task.status === 'FAILURE'">
                                                                         <img src="assets/icons/docker/return.svg" *ngIf="task.status === 'HALTED'" (click)="recrawl(task)">
                                                                         <!-- <img src="assets/icons/docker/download.svg" *ngIf="(task.status === 'SUCCESS') && (task.jobType === 'faq')"> -->
                                                                         <img src="assets/icons/docker/check.svg" *ngIf="(task.status === 'SUCCESS')">
-                                                                        <img src="assets/icons/docker/external-link.svg" class="ml-2 mb-2px" (click)="navigateTo(task)" *ngIf="(task.extractionSourceId && (task.jobType == 'webdomain' || task.jobType == 'faq'))">                        
+                                                                        <img src="assets/icons/docker/external-link.svg" class="ml-2 mb-2px" (click)="navigateTo(task)" *ngIf="(task.extractionSourceId && (task.jobType == 'webdomain' || task.jobType == 'faq')) || (task.jobType == 'STRUCTURED_DATA_INGESTION')">                        
                                                                     </div>
                                                                     <div class="status-blcok">                        
                                                                         <img src="assets/icons/ringLoading.svg" class="inProgress" *ngIf="task.status === 'IN_PROGRESS' || task.status === 'validation'" placement="top" container='body'>
