--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -246,6 +246,26 @@
 				</span>
 				<span class="linkTitle">Team Management</span>
 			</div>
+
+			<div mat-button class="mat-button" [routerLink]="['/actions']" skipLocationChange routerLinkActive="active"
+				(click)="preview('index')" mat-button>
+				<span class="inlineIconBox">
+					<img src="assets/icons/sidemenu/new-icons/actions-config.svg" class="defaultIcon">
+					<img src="assets/icons/sidemenu/new-icons/actions-config.svg" class="activeIcon">
+				</span>
+				<span class="linkTitle">Actions</span>
+			</div>
+
+			<div mat-button class="mat-button" [routerLink]="['/smallTalk']" skipLocationChange routerLinkActive="active"
+				(click)="preview('index')" mat-button>
+				<span class="inlineIconBox">
+					<img src="assets/icons/sidemenu/new-icons/smalltalk.svg" class="defaultIcon">
+					<img src="assets/icons/sidemenu/new-icons/smalltalk.svg" class="activeIcon">
+				</span>
+				<span class="linkTitle">Small Talk</span>
+			</div>
+
+			
 		</div>
 
 		<div class="status-docker" (click)="(dockService.showStatusDocker = !dockService.showStatusDocker); openStatusDocker()">
