--- a/findly-builder/src/app/components/status-docker/status-docker.component.scss
+++ b/findly-builder/src/app/components/status-docker/status-docker.component.scss
@@ -58,7 +58,10 @@
     }    
     .perfect-scroll-modal-body{
         &.docker{
-            height: 215px;
+            max-height: 428px;
+            .ps-content{
+                max-height: 428px;
+            }
         }        
     }
     .inProgress{
