--- a/findly-builder/src/app/components/app-header/app-header.component.html
+++ b/findly-builder/src/app/components/app-header/app-header.component.html
@@ -83,6 +83,9 @@
                 <li class="nav-item test-button">
                     <button class="kr-sg-button-secondary btn_lg" (click)="openOrCloseSearchSDK()">Test</button>
                 </li>
+                <li class="nav-item test-button">
+                    <img src="assets/icons/sidemenu/new-icons/actions.svg" class="defaultIcon" (click)="train()">
+                </li>
                 <li class="nav-item search-block">
                     <div class="search_icon" [ngClass]="{'active-search-top' : showSearch}">
                         <img src="assets/icons/sidemenu/search.svg" (click)="showSearch=!showSearch;searchText=''">
